<resources>
    <string name="app_name">SmartAlert</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="pass_reset">Pass Reset</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="user_location_changed">User location was changed!</string>
    <string name="internet_provider_disabled">Internet provider is disabled…</string>
    <string name="location_permission_not_granted">Location Permission not granted…</string>
    <string name="location_provider_disabled">Location Provider disabled…</string>
    <string name="location_provider_status_changed">Location Provider status changed…</string>
    <string name="abort">Abort</string>
    <string name="fire">Fire</string>
    <string name="sign_out">Sign Out</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="name_field">Name:</string>
    <string name="name_hint">Name</string>
    <string name="surname_field">Surname:</string>
    <string name="surname_hint">Surname</string>
    <string name="phone_field">Phone:</string>
    <string name="phone_hint">Phone</string>
    <string name="user_emergency_alerts_history">User Emergency Alerts History</string>
    <string name="language">Language:</string>
    <string name="en">EN</string>
    <string name="el">EL</string>
    <string name="ru">RU</string>
    <string name="name">"Name: "</string>
    <string name="surname">"Surname: "</string>
    <string name="phone">"Phone: "</string>
    <string name="type">"Type: "</string>
    <string name="status">"Status: "</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>
    <string name="timestamp">"Timestamp: "</string>
    <string name="exception">Exception occurred, check log file for more information.</string>
    <string name="seconds_remaining">"seconds remaining: "</string>
    <string name="user_fallen">User has fallen!</string>
    <string name="crisis_aborted">Crisis aborted!</string>
    <string name="location_fire_event">Location could not be retrieved to save the fire event!</string>
    <string name="exception_file_upload">Exception occurred during file upload, check log file for more information.</string>
    <string name="emergency_alert_submitted">Emergency Alert record was submitted.</string>
    <string name="location_emergency_alert_event">Location could not be retrieved to create the Emergency Alert!</string>
    <string name="no_emergency_contacts">You have no emergency contacts!</string>
    <string name="exception_emergency_contacts">Failed to retrieve user emergency contacts, check log file for more information.</string>
    <string name="sms_internet_disabled">Internet provider is disabled! Emergency contacts could not be retrieved to send them an SMS!</string>
    <string name="sms_success">SMS messages have been successfully sent!</string>
    <string name="sos">"SOS! "</string>
    <string name="sos_fallen">"I have fallen at: "</string>
    <string name="sos_fire">"Ι see a fire at: "</string>
    <string name="sos_earthquake">"An earthquake is happening at: "</string>
    <string name="emergency_contacts_action_add">Add Emergency Contact</string>
    <string name="emergency_contacts_action_edit">Edit Emergency Contact</string>
    <string name="emergency_contacts_action_delete">Delete Emergency Contact</string>
    <string name="emergency_contacts_action_validation_error_name">Name field is required!</string>
    <string name="emergency_contacts_action_validation_error_name_length">This field max length is 50 characters!</string>
    <string name="emergency_contacts_action_validation_error_surname">Surname field is required!</string>
    <string name="emergency_contacts_action_validation_error_surname_length">This field max length is 50 characters!</string>
    <string name="emergency_contacts_action_validation_error_phone">Phone field is required!</string>
    <string name="emergency_contacts_action_validation_error_phone_pattern">This field must be a Pattern (69[0–9]{8})!</string>
    <string name="emergency_contacts_activity_no_contacts">You have no emergency contacts yet.</string>
    <string name="emergency_contacts_activity_retrieval_failed">Failed to retrieve user emergency contacts, check log file for more information.</string>
    <string name="login_activity_validation_error_email">Email cannot be empty!</string>
    <string name="login_activity_validation_error_password">Password cannot be empty!</string>
    <string name="login_activity_pass_reset_success">Password reset email has been sent! Please check your emails!</string>
    <string name="login_activity_signup_unsuccessful">"Sign up was unsuccessful. Error message: "</string>
    <string name="login_activity_signup_success">You have been successfully sign up! Please check your emails to verify your account!</string>
    <string name="login_activity_login_unsuccessful">"Login was unsuccessful. Error message: "</string>
    <string name="login_activity_login_success">You have been successfully logged in!</string>
    <string name="login_activity_login_unverified">Account has not been verified! Please check your emails!</string>
    <string name="emergency_alerts_activity_retrieval_failed">Failed to retrieve user emergency alerts, check log file for more information.</string>
    <string name="emergency_alerts_activity_no_alerts">You have no emergency alerts yet!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="earthquake_mode_enabled">Earthquake mode enabled!</string>
    <string name="earthquake_detected">Earthquake detected!</string>
</resources>